# synthify

./: CMakeLists.txt
.github/workflows/: main.yml
Installer/: Injury.iss  Synthify.iss
Source/: ADSRVisualizer.cpp  ADSRVisualizer.h  FxProcessor.cpp  FxProcessor.h  Juceheader.h  LookAndFeel.cpp  LookAndFeel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SampleAnalyzer.cpp  SampleAnalyzer.h  SynthVoice.cpp  SynthVoice.h  WaveformDisplay.cpp  WaveformDisplay.h  WavetableEngine.cpp  WavetableEngine.h
